<resources>
    <string name="app_name">Project1</string>
    <string name="company">UNIVERSAL POLYMER</string>
    <string name="name">Shreesha B</string>
    <string name="job">Manager</string>
    <string name="phone">9620522347</string>
    <string name="Address">Badanaje,Vital,DK 574243</string>
    <string name="emailweb">shreeshapilinja@gmail.com\n\nhttps://aiml.eu5.org</string>
</resources>